scaffold pages, events, destinations added misc gems

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Casinos</title>
-  <%= csrf_meta_tags %>
+	<title>Casinos</title>
 	<%= stylesheet_link_tag    "application", media: "all" %>
 	<%= javascript_include_tag "application" %>
+	<%= csrf_meta_tags %>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Bootstrap -->
 
@@ -16,8 +16,10 @@
 	<![endif]-->
 </head>
 <body>
+	
+	<%= render 'layouts/nav' %>
 
-<%= yield %>
+	<%= yield %>
 
 </body>
 </html>
