--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -65,7 +65,8 @@ body {
 
 #footer {
 	height: 60px;
-	background-color:#585858;
+	background-color:#000;
+	// background-color:#585858;
 	margin-top:50px;
 	padding-top:20px;
 	padding-bottom:20px;
