--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -11,12 +11,12 @@
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<%= content_tag :li, link_to(raw('Destinations <i class="fa fa-fw fa-globe"></i>'), destinations_url) -%>
-				<%= content_tag :li, link_to(raw('Events <i class="fa fa-fw fa-calendar"></i>'), events_url) -%>
-				<%= content_tag :li, link_to(raw('Flights <i class="fa fa-fw fa-plane"></i>'), '#flights') -%>
-				<%= content_tag :li, link_to(raw('V.I.P. <i class="fa fa-fw fa-star"></i>'), '#preferred') -%>
-				<%#= content_tag :li, link_to(raw('About <i class="fa fa-fw fa-info-circle"></i>'), '#about') -%>
-				<%= content_tag :li, link_to(raw('Contact <i class="fa fa-fw fa-phone"></i>'), '#contact') -%>
+				<%= content_tag :li, link_to(fa_icon('globe')+'Destinations', destinations_url) -%>
+				<%= content_tag :li, link_to(fa_icon('calendar')+'Events', events_url) -%>
+				<%= content_tag :li, link_to(fa_icon('plane')+'Flights', '#flights') -%>
+				<%= content_tag :li, link_to(fa_icon('star')+'V.I.P.', '#preferred') -%>
+				<%#= content_tag :li, link_to(fa_icon('info-circle')+'About', '#about') -%>
+				<%= content_tag :li, link_to(fa_icon('phone')+'Contact', '#contact') -%>
 			</ul>
 
 			<ul class="navbar-right">
