--- a/app/views/destinations/edit.html.erb
+++ b/app/views/destinations/edit.html.erb
@@ -1,5 +1,7 @@
 <div class="container">
-	<h1>Editing destination</h1>
+	<div class="page-header">
+		<h1>Editing Destination</h1>
+	</div>
 
 	<%= render 'form' %>
 
