--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,9 @@
  * file per style scope.
  *
  *= require_tree .
+ *= require froala_editor.min.css
+ *= require froala_style.min.css
+ *= require font-awesome
  *= require_self
  */
 
