--- a/app/views/destinations/show.html.erb
+++ b/app/views/destinations/show.html.erb
@@ -1,8 +1,32 @@
 <div class="container">
-	<p id="notice"><%= notice %></p>
 
-	<%= @destination.attributes -%>
+	<div class="page-header">
+		<h1>
+			<%= @destination.name %>
+		</h1>
+	</div>
 
-	<%= link_to 'Edit', edit_destination_path(@destination) %> |
-	<%= link_to 'Back', destinations_path %>
+	<div class="row">
+
+		<div class="col-sm-12">
+
+			<div class="col-sm-4 lead">
+				<%= @destination.rendered_content %>
+			</div>
+			<div class="col-sm-8">
+				<div class="well">
+					<%= @destination.attributes -%>
+				</div>
+			</div>
+
+		</div>
+
+	</div>
+
+	<hr>
+	<p>
+		<%= link_to 'Edit', edit_destination_path(@destination) %> |
+		<%= link_to 'Back', destinations_path %>
+	</p>
+
 </div>
