--- a/app/views/menu_items/new.html.erb
+++ b/app/views/menu_items/new.html.erb
@@ -1,9 +1,12 @@
 <div class="container">
+
+
 	<div class="page-header">
-		<h1>New Destination</h1>
+		<h1>New Menu Item</h1>
 	</div>
 
 	<%= render 'form' %>
 
-	<%= link_to 'Back', destinations_path %>
+	<%= link_to 'Back', menu_items_path %>
+
 </div>
