--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,9 +1,11 @@
 <div class="container">
+	
 	<div class="page-header">
-		<h1>New Destination</h1>
+		<h1>New Page</h1>
 	</div>
 
 	<%= render 'form' %>
 
-	<%= link_to 'Back', destinations_path %>
+	<%= link_to 'Back', pages_path %>
+
 </div>
