--- a/app/views/admin/destinations/_form.html.erb
+++ b/app/views/admin/destinations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@destination) do |f| %>
+<%= form_for [:admin, @destination] do |f| %>
 <% if @destination.errors.any? %>
 <div id="error_explanation">
   <h2><%= pluralize(@destination.errors.count, "error") %> prohibited this destination from being saved:</h2>
@@ -13,7 +13,7 @@
 
 <div class="row">
 
-  <div class="col-sm-8 col-md-9">
+  <div class="col-sm-8">
 
     <div class="form-group">
       <%#= f.label :name %>
@@ -27,7 +27,7 @@
 
   </div>
 
-  <div class="col-sm-4 col-md-3">
+  <div class="col-sm-4">
     <div class="checkbox">
       <label>
         <%= f.check_box :international %> Internation Destination
