--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -36,8 +36,6 @@
     <%= @event.image_id %>
   </p>
 
-  <% if true #admin -%>
   <%= link_to 'Edit', edit_admin_event_path(@event) %> |
-  <%= link_to 'Back', admin)events_path %>
-  <% end -%>
+  <%= link_to 'Back', admin_events_path %>
 </div>
