--- a/app/views/admin/menu_items/_form.html.erb
+++ b/app/views/admin/menu_items/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@menu_item) do |f| %>
+<%= form_for [:admin, @menu_item] do |f| %>
   <% if @menu_item.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@menu_item.errors.count, "error") %> prohibited this menu_item from being saved:</h2>
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :value %><br>
+    <%= f.label :value, 'Label' %><br>
     <%= f.text_field :value %>
   </div>
   <div class="field">
