--- a/app/views/admin/pages/_form.html.erb
+++ b/app/views/admin/pages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@page) do |f| %>
+<%= form_for [:admin, @page] do |f| %>
 <% if @page.errors.any? %>
 <div id="error_explanation">
 	<h2><%= pluralize(@page.errors.count, "error") %> prohibited this page from being saved:</h2>
@@ -15,7 +15,7 @@
 
 <div class="row">
 
-	<div class="col-sm-8 col-md-9">
+	<div class="col-sm-8">
 
 		<div class="form-group">
 			<%#= f.label :title %>
@@ -35,7 +35,7 @@
 
 	</div>
 
-	<div class="col-sm-4 col-md-3">
+	<div class="col-sm-4">
 
 		<div class="form-group">
 			<%= f.label :status, 'Page Status' %>
