--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -1,7 +1,3 @@
-<div class="container">
-
-<h1>Pages</h1>
-
 <div class="table-responsive">
 <table class="table table-striped">
   <thead>
@@ -20,8 +16,8 @@
         <td><%= page.slug %></td>
         <td><%= page.status %></td>
         <td><%= link_to 'Show', short_page_path(page) %></td>
-        <td><%= link_to 'Edit', edit_page_path(page) %></td>
-        <td><%= link_to 'Destroy', page, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit', edit_admin_page_path(page) %></td>
+        <td><%= link_to 'Destroy', [:admin, page], method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,6 +26,4 @@
 
 <br>
 
-<%= link_to 'New Page', new_page_path %>
-
-</div>
+<%= link_to 'New Page', new_admin_page_path %>
