--- a/app/views/admin/pages/show.html.erb
+++ b/app/views/admin/pages/show.html.erb
@@ -8,12 +8,10 @@
 
 	<%= @page.rendered_content %>
 
-	<% if true #admin -%>
 	<hr>
 	<p>
-		<%= link_to 'Edit', edit_admin_page_path(@page) %> |
-		<%= link_to 'Back', admin_pages_path %>
+		<%= link_to 'Edit', edit_page_path(@page) %> |
+		<%= link_to 'Back', pages_path %>
 	</p>
-	<% end -%>
 
 </div>
