--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -1,10 +1,12 @@
-<section class="parallax" style="background-image: url('http://upload.wikimedia.org/wikipedia/commons/1/17/Abstract_-_Water_(Imagicity_998).jpg');">
+<section class="parallax" style="background-image: url('http://upload.wikimedia.org/wikipedia/commons/1/1c/Roulette_-_detail.jpg');">
 	<div class="jumbotron">
 		<div class="container text-center">
 			<h1>Destinations</h1>
 		</div>
 	</div>
 </section>
+
+
 
 <span class="divider"></span>
 
@@ -14,17 +16,13 @@
 		<thead>
 			<tr>
 				<th>Destination</th>
-				<th colspan="3">Actions</th>
 			</tr>
 		</thead>
 
 		<tbody>
 			<% @destinations.each do |destination| %>
 			<tr>
-				<td><%= destination.name -%></td>
-				<td><%= link_to 'Show', destination %></td>
-				<td><%= link_to 'Edit', edit_destination_path(destination) %></td>
-				<td><%= link_to 'Destroy', destination, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+				<td><%= link_to destination.name, destination -%></td>
 			</tr>
 			<% end %>
 		</tbody>
@@ -32,5 +30,9 @@
 
 	<br>
 
-	<%= link_to 'New Destination', new_destination_path %>
+	<% if true #admin -%>
+
+	<%= link_to 'New Destination', new_admin_destination_path %>
+
+	<% end -%>
 </div>
