--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,4 @@
-<section class="parallax" style="background-image: url('http://upload.wikimedia.org/wikipedia/commons/1/1c/Roulette_-_detail.jpg');">
+<section class="parallax" style="background-image: url('http://upload.wikimedia.org/wikipedia/commons/1/17/Abstract_-_Water_(Imagicity_998).jpg');">
 	<div class="jumbotron">
 		<div class="container text-center">
 			<h1>Events</h1>
@@ -32,5 +32,8 @@
 
 	</div>
 
-	<%= link_to 'New Event', new_event_path %>
+	<% if true #admin -%>
+	<%= link_to 'New Event', new_admin_event_path -%>
+	<% end -%>
+
 </div>
