parallax bg images

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,4 @@
-<section class="parallax" style="background-image: url('http://upload.wikimedia.org/wikipedia/commons/1/17/Abstract_-_Water_(Imagicity_998).jpg');">
+<section class="parallax" style="background-image: url('<%= image_url('bg-water.jpg') -%>');">
 	<div class="jumbotron">
 		<div class="container text-center">
 			<h1>Events</h1>
