--- a/app/views/site_pages/index.html.erb
+++ b/app/views/site_pages/index.html.erb
@@ -27,7 +27,7 @@
 	<hr>
 </div>
 
-<section class="parallax" style="background-image: url('http://upload.wikimedia.org/wikipedia/commons/1/1c/Roulette_-_detail.jpg');">
+<section class="parallax" style="background-image: url('<%= image_url('bg-roulette.jpg') -%>');">
 	<div class="jumbotron">
 		<div class="container text-center">
 			<h1>Gaming Tourism Offers</h1>
@@ -127,7 +127,7 @@
 	<span class="divider"></span>
 </section>
 
-<section class="parallax" style="background-image: url('http://upload.wikimedia.org/wikipedia/commons/5/56/2008-1227-EncoreLV-002-Pan.JPG');">
+<section class="parallax" style="background-image: url('<%= image_url('bg-hotel-room.jpg') -%>');">
 	<div class="jumbotron">
 		<div class="container text-center">
 			<h1>Casino Comps</h1>
