--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -1,4 +1,4 @@
-<section class="parallax" style="background-image: url('http://upload.wikimedia.org/wikipedia/commons/1/1c/Roulette_-_detail.jpg');">
+<section class="parallax" style="background-image: url('<%= image_url('bg-roulette.jpg') -%>');">
 	<div class="jumbotron">
 		<div class="container text-center">
 			<h1>Destinations</h1>
