migrate remaining models to admin namespace

--- a/app/views/admin/destinations/_form.html.erb
+++ b/app/views/admin/destinations/_form.html.erb
@@ -30,7 +30,7 @@
   <div class="col-sm-4">
     <div class="checkbox">
       <label>
-        <%= f.check_box :international %> Internation Destination
+        <%= f.check_box :international %> International Destination
       </label>
     </div>
     <%= f.submit nil, class: 'btn btn-primary btn-lg btn-block' %>
