--- a/app/views/admin/admin/_nav.html.erb
+++ b/app/views/admin/admin/_nav.html.erb
@@ -1,7 +1,28 @@
 <div class="list-group">
-	<%= admin_nav_item 'Pages', admin_pages_path -%>
+	<%= admin_nav_item 'Pages', admin_pages_path do -%>
+	<ul>
+		<%= content_tag :li, link_to('New Page', new_admin_page_path) -%>
+	</ul>
+	<% end -%>
 	<%= admin_nav_item 'Navigation Menu', admin_menu_items_path -%>
-	<%= admin_nav_item 'Destinations', admin_destinations_path -%>
-	<%= admin_nav_item 'Casinos', '#admin_casinos_path' -%>
-	<%= admin_nav_item 'Events', admin_events_path -%>
+	<%= admin_nav_item 'Destinations', admin_destinations_path do -%>
+	<ul>
+		<%= content_tag :li, link_to('New Destination', new_admin_destination_path) -%>
+	</ul>
+	<% end -%>
+	<%= admin_nav_item 'Casinos', '#admin_casinos_path' do -%>
+	<ul>
+		<%#= content_tag :li, link_to('New Destination', new_admin_destination_path) -%>
+	</ul>
+	<% end -%>
+	<%= admin_nav_item 'Events', admin_events_path do -%>
+	<ul>
+		<%= content_tag :li, link_to('New Event', new_admin_event_path) -%>
+	</ul>
+	<% end -%>
+	<%= admin_nav_item 'Flights', '#admin_flights_path' do -%>
+	<ul>
+		<%#= content_tag :li, link_to('New Destination', new_admin_destination_path) -%>
+	</ul>
+	<% end -%>
 </div>
