--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -1,7 +1,6 @@
+<%= link_to 'New Event', new_admin_event_path, class: 'btn btn-primary' %>
 
 <div class="table-responsive">
-	
-
 	<table class="table table-striped">
 		<thead>
 			<tr>
@@ -20,7 +19,4 @@
 			<% end -%>
 		</tbody>
 	</table>
-
 </div>
-
-<%= link_to 'New Event', new_admin_event_path %>
