--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -17,6 +17,7 @@
 				<%= content_tag :li, link_to(fa_icon(item.icon)+item.value, item.link, target: (item.blank_target ? '_blank' : '_self')) -%>
 				<% end -%>
 
+
 				<%#= content_tag :li, link_to(fa_icon('globe')+'Destinations', destinations_url) -%>
 				<%#= content_tag :li, link_to(fa_icon('calendar')+'Events', events_url) -%>
 				<%#= content_tag :li, link_to(fa_icon('plane')+'Flights', '#flights') -%>
@@ -25,7 +26,12 @@
 				<%#= content_tag :li, link_to(fa_icon('phone')+'Contact', '/contact') -%>
 			</ul>
 
-			<ul class="navbar-right">
+			<ul class="nav navbar-nav navbar-right">
+				<% if user_signed_in? -%>
+				<%= content_tag :li, link_to('Logout', destroy_user_session_path, method: :delete) -%>
+				<% else -%>
+				<%= content_tag :li, link_to('Login', new_user_session_path) -%>
+				<% end -%>
 				
 			</ul>
 
