--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -32,7 +32,8 @@
 
 	</div>
 
-	<% if true #admin -%>
+	<% if is_admin? -%>
+	<hr>
 	<%= link_to 'New Event', new_admin_event_path -%>
 	<% end -%>
 
