--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -8,12 +8,10 @@
 
 	<%= @page.rendered_content %>
 
-	<% if true #admin -%>
+	<% if is_admin? -%>
 	<hr>
-	<p>
-		<%= link_to 'Edit', edit_admin_page_path(@page) %> |
-		<%= link_to 'Back', admin_pages_path %>
-	</p>
+	<%= link_to 'Edit', edit_admin_page_path(@page) %> |
+	<%= link_to 'Back', admin_pages_path %>
 	<% end -%>
 
 </div>
