--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -67,14 +67,14 @@ body {
 }
 
 #footer {
-	height: 60px;
-	background-color:#000;
+	// height: 60px;
+	// background-color:#000;
 	// background-color:#585858;
-	margin-top:50px;
-	padding-top:20px;
-	padding-bottom:20px;
+	// margin-top:50px;
+	// padding-top:20px;
+	// padding-bottom:20px;
 }
 
 #footer a {
-	color:#efefef;
+	// color:#efefef;
 }
