--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -32,6 +32,10 @@
 
 	</div>
 
+	<div class="pagination-container text-center">
+		<%= paginate @events %>
+	</div>
+
 	<% if is_admin? -%>
 	<hr>
 	<%= link_to 'New Event', new_admin_event_path -%>
