--- a/app/views/admin/flights/index.html.erb
+++ b/app/views/admin/flights/index.html.erb
@@ -1,15 +1,11 @@
-<section class="parallax" style="background-image: url('<%= image_url('bg-roulette.jpg') -%>');">
-	<div class="jumbotron">
-		<div class="container text-center">
-			<h1>Flights</h1>
-		</div>
-	</div>
-</section>
 
-<span class="divider"></span>
+<%= link_to 'New Flight', new_admin_flight_path, class: 'btn btn-primary' %>
+<%= render 'form_import' -%>
 
-<div class="container">
 
+<hr>
+
+<div class="table-responsive">
 	<table class="table table-striped">
 		<thead>
 			<tr>
@@ -19,6 +15,7 @@
 				<%= content_tag :th, sort_link(@flights_q, :arriving_airport, 'Destination (Arriving) Airport') %>
 				<%= content_tag :th, sort_link(@flights_q, :arriving_at) %>
 				<%= content_tag :th, sort_link(@flights_q, :flight_number) %>
+				<th colspan="3"></th>
 			</tr>
 		</thead>
 
@@ -31,18 +28,15 @@
 				<td><%= flight.arriving_airport %></td>
 				<td><%= flight.arriving_at %></td>
 				<td><%= flight.flight_number %></td>
+				<td><%= link_to 'Show', flight %></td>
+				<td><%= link_to 'Edit', edit_admin_flight_path(flight) %></td>
+				<td><%= link_to 'Destroy', [:admin, flight], method: :delete, data: { confirm: 'Are you sure?' } %></td>
 			</tr>
 			<% end %>
 		</tbody>
 	</table>
+</div>
 
-	<div class="pagination-container text-center">
-		<%= paginate @flights %>
-	</div>
-
-	<% if is_admin? -%>
-	<hr>
-	<%= link_to 'New Flight', new_admin_flight_path %>
-	<% end -%>
-
+<div class="pagination-container text-center">
+	<%= paginate @flights %>
 </div>
