--- a/app/views/site_pages/index.html.erb
+++ b/app/views/site_pages/index.html.erb
@@ -96,22 +96,21 @@
 			<!-- <img src="http://i.huffpost.com/gen/1893910/thumbs/o-AIR-TRAVEL-facebook.jpg" class="img-responsive img-thumbnail"> -->
 			<div class="col-sm-6">
 				<h4>Browse by Date, Destination or Departing City</h4>
+
+				<%= search_form_for @flights_q, url: flights_path do |f| %>
+
 				<p>
-					<select class="form-control">
-						<option default>Date</option>
-					</select>
+					<%= f.collection_select :departing_at_gt, Flight.select(:departing_at).uniq, :departing_at, :departing_at, {prompt: 'Departing Date'}, {class: 'form-control'} %>
 				</p>
 				<p>
-					<select class="form-control">
-						<option default>Destination</option>
-					</select>
+					<%= f.select :destination_name_cont, options_for_select(Flight.available_destinations), {prompt: 'Destination'}, {class: 'form-control'} -%>
 				</p>
+
 				<p>
-					<select class="form-control">
-						<option default>Departing City</option>
-					</select>
+				<%= f.collection_select :departing_airport_eq, Flight.select(:departing_airport).uniq.sort, :departing_airport, :departing_airport, {prompt: 'Departing Airport'}, {class: 'form-control'} -%>
 				</p>
-				<button class="btn btn-primary btn-lg btn-block">Find Flight <%= fa_icon('plane') -%></button>
+				<button type="submit" class="btn btn-primary btn-lg btn-block">Find Flight <%= fa_icon('plane') -%></button>
+				<% end %>
 			</div>
 			<div class="col-sm-6">
 				<h4>&nbsp;</h4>
