--- a/app/views/admin/destinations/_form.html.erb
+++ b/app/views/admin/destinations/_form.html.erb
@@ -22,7 +22,7 @@
 
     <div class="form-group">
       <%= f.label :content, 'Destination Content' %>
-      <%= f.text_area :content %>
+      <%= f.text_area :content, class: 'froala_content' %>
     </div>
 
   </div>
