--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -1,2 +1,54 @@
 
 a.panel-heading { display: block; }
+
+#adminMenu > ul ul {
+	margin-bottom: 10px;
+	list-style: none;
+}
+
+.dropdown-submenu {
+  position: relative;
+  > .dropdown-menu {
+    top: 0;
+    left: 0%;
+    margin-top: -6px;
+    margin-left: -1px;
+    -webkit-border-radius: 0 6px 6px 6px;
+    -moz-border-radius: 0 6px 6px 6px;
+    border-radius: 0 6px 6px 6px;
+  }
+  &:hover {
+    > .dropdown-menu {
+      display: block;
+    }
+    > a:after {
+      border-left-color: #ffffff;
+    }
+  }
+  > a:after {
+    display: block;
+    content: " ";
+    float: right;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 5px 0 5px 5px;
+    border-left-color: #cccccc;
+    margin-top: 5px;
+    margin-right: -10px;
+  }
+  float: none;
+  > .dropdown-menu {
+    left: 100%;
+    margin-right: 10px;
+    -webkit-border-radius: 6px 0 6px 6px;
+    -moz-border-radius: 6px 0 6px 6px;
+    border-radius: 6px 0 6px 6px;
+  }
+}
+
+.sidebar {
+  float: right;
+  margin-right: 20px;
+}
