--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,14 +13,15 @@
  *= require_tree .
  *= require froala_editor.min.css
  *= require froala_style.min.css
- *= require font-awesome
  *= require_self
  */
 
 @import "font-awesome";
 
 @import "bootstrap/variables";
+@import "bootstrap-sprockets";
 @import "bootstrap";
+@import "bootstrap-datetimepicker";
 /*@import "bootswatch";*/
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,700,400);
