--- a/app/views/admin/cruises/_form.html.erb
+++ b/app/views/admin/cruises/_form.html.erb
@@ -15,22 +15,18 @@
 	<%= f.label :title %><br>
 	<%= f.text_field :title %>
 </div>
-<div class="field">
-	<%= f.label :slug %><br>
-	<%= f.text_field :slug %>
-</div>
 <div class="form-group">
 	<%= f.label :content %>
 	<%= f.text_area :content, class: 'froala_content' %>
 </div>
-<div class="field">
-	<%= f.label :start_at %><br>
-	<%= f.text_field :start_at, class: 'form-control datetimepicker' %>
+<!-- <div class="field">
+	<%#= f.label :start_at %><br>
+	<%#= f.text_field :start_at, class: 'form-control datetimepicker' %>
 </div>
 <div class="field">
-	<%= f.label :end_at %><br>
-	<%= f.text_field :end_at, class: 'form-control datetimepicker' %>
-</div>
+	<%#= f.label :end_at %><br>
+	<%#= f.text_field :end_at, class: 'form-control datetimepicker' %>
+</div> -->
 <div class="field">
 	<%= f.label :venue_id %><br>
 	<%= f.text_field :venue_id %>
