--- a/app/views/cruises/show.html.erb
+++ b/app/views/cruises/show.html.erb
@@ -1,54 +1,53 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
 
-<p>
-	<strong>Title:</strong>
-	<%= @cruise.title %>
-</p>
+	<div class="page-header">
+		<h1>
+			<%= @cruise.title %>
+		</h1>
+	</div>
 
-<p>
-	<strong>Slug:</strong>
-	<%= @cruise.slug %>
-</p>
+	<div class="row">
 
-<p>
-	<strong>Content:</strong>
-	<%= @cruise.content %>
-</p>
+		<div class="col-sm-12">
 
-<p>
-	<strong>Start at:</strong>
-	<%= @cruise.start_at %>
-</p>
+			<div class="col-sm-4 lead">
+				<%= @cruise.rendered_content %>
+			</div>
+			<div class="col-sm-8">
+				<div class="well">
+					<%= @cruise.attributes -%>
+				</div>
+			</div>
 
-<p>
-	<strong>End at:</strong>
-	<%= @cruise.end_at %>
-</p>
+		</div>
 
-<p>
-	<strong>Venue:</strong>
-	<%#= @cruise.venue %>
-</p>
+	</div>
 
-<h3>Ports of Call</h3>
-<table class="table table-striped table-condensed">
-	<thead>
-		<tr>
-			<th>Port</th>
-			<th>Arrives</th>
-			<th>Departs</th>
-		</tr>
-	</thead>
-	<tbody>
-		<% @cruise.port_of_calls.each do |poc| -%>
-		<tr>
-			<td><%= poc.port_id -%></td>
-			<td><%= poc.arrives_at -%></td>
-			<td><%= poc.departs_at -%></td>
-		</tr>
-		<% end -%>
-	</tbody>
-</table>
+	<div class="table-responsive">
+		<table class="table table-striped table-condensed">
+			<thead>
+				<tr>
+					<th>Port</th>
+					<th>Arrive</th>
+					<th>Depart</th>
+				</tr>
+			</thead>
+			<tbody>
+				<% @cruise.port_of_calls.each do |poc| -%>
+				<tr>
+					<td><%= link_to poc.port.name, poc.port -%></td>
+					<td><%= poc == @cruise.port_of_calls.first ? '-' : poc.arrives_at -%></td>
+					<td><%= poc == @cruise.port_of_calls.last ? '-' : poc.departs_at -%></td>
+				</tr>
+				<% end -%>
+			</tbody>
+		</table>
+	</div>
 
-<%= link_to 'Edit', edit_admin_cruise_path(@cruise) %>
-<%#= link_to 'Back', cruises_path %>
+	<% if is_admin? -%>
+	<hr>
+	<%= link_to 'Edit', edit_admin_cruise_path(@cruise) %> |
+	<%= link_to 'Back', admin_cruises_path %>
+	<% end -%>
+
+</div>
