--- a/app/views/cruises/index.html.erb
+++ b/app/views/cruises/index.html.erb
@@ -17,7 +17,10 @@
 			<div class="panel panel-primary">
 				<div class="panel-body">
 
-					<%= link_to image_tag( 'http://upload.wikimedia.org/wikipedia/commons/9/95/MSMajestyOfTheSeasEdit1.JPG', class: 'img-responsive' ), cruise -%>
+					<% if cruise.pictures.first.present? -%>
+					<%= link_to image_tag( cruise.pictures.first.image_url, class: 'img-responsive' ), cruise -%>
+					<% end -%>
+
 					<h3>
 						<%= cruise.title -%><br>
 						<small><%#= cruise.date_span -%></small>
