ransack search by date equals

--- a/app/views/admin/admin/_image_upload.html.erb
+++ b/app/views/admin/admin/_image_upload.html.erb
@@ -12,6 +12,7 @@
 		<%= pic.hidden_field :imageable_id -%>
 		<%= pic.hidden_field :imageable_type -%>
 		<%= pic.file_field :image -%>
+		<%= 'remove' -%>
 	<% end -%>
 
 
