pictures like a boss! Concerns put to good use.

--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -11,6 +11,8 @@
     </div>
   <% end %>
 
+  <%= render 'admin/admin/images/pictures_upload', f: f -%>
+
   <div class="field">
     <%= f.label :title %><br>
     <%= f.text_field :title %>
