--- a/app/views/admin/destinations/_form.html.erb
+++ b/app/views/admin/destinations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:admin, @destination] do |f| %>
+<%= form_for [:admin, @destination], html: {multipart: true} do |f| %>
 <% if @destination.errors.any? %>
 <div id="error_explanation">
   <h2><%= pluralize(@destination.errors.count, "error") %> prohibited this destination from being saved:</h2>
@@ -14,6 +14,8 @@
 <div class="row">
 
   <div class="col-sm-8">
+
+    <%= render 'admin/admin/images/pictures_upload', f: f -%>
 
     <div class="form-group">
       <%#= f.label :name %>
