--- a/app/views/site_pages/index.html.erb
+++ b/app/views/site_pages/index.html.erb
@@ -97,20 +97,8 @@
 			<div class="col-sm-6">
 				<h4>Browse by Date, Destination or Departing City</h4>
 
-				<%= search_form_for @flights_q, url: flights_path do |f| %>
+				<%= render 'flights/search' -%>
 
-				<p>
-					<%= f.select :departing_at_date_equals, options_for_select(Flight.unique_dates), {prompt: 'Departing Date'}, {class: 'form-control'} %>
-				</p>
-				<p>
-					<%= f.select :destination_name_cont, options_for_select(Flight.available_destinations), {prompt: 'Destination'}, {class: 'form-control'} -%>
-				</p>
-
-				<p>
-				<%= f.collection_select :departing_airport_eq, Flight.select(:departing_airport).uniq.sort, :departing_airport, :departing_airport, {prompt: 'Departing Airport'}, {class: 'form-control'} -%>
-				</p>
-				<button type="submit" class="btn btn-primary btn-lg btn-block">Find Flight <%= fa_icon('plane') -%></button>
-				<% end %>
 			</div>
 			<div class="col-sm-6">
 				<h4>&nbsp;</h4>
